fixed the moving positioning of the tanks when shifted positions. They still need to be connected into the server to control movement

--- a/http/css/ui_style.css
+++ b/http/css/ui_style.css
@@ -372,80 +372,77 @@
 
 /*Tanks*/
 .tanklevel0{
-	background-image: url(../images/elements/Water.png);
-	height: 60px;
+	background-size: 89px 60px;
 }
 .tanklevel1{
-	background-image: url(../images/elements/Water.png);
-	height: 50px;
+	background-size: 89px 50px;
 }
 .tanklevel2{
-	background-image: url(../images/elements/Water.png);
-	height: 40px;
+	background-size: 89px 40px;
 }
 .tanklevel3{
-	background-image: url(../images/elements/Water.png);
-	height: 30px;
+	background-size: 89px 30px;
 }
 .tanklevel4{
-	background-image: url(../images/elements/Water.png);
-	height: 20px;
+	background-size: 89px 20px;
 }
 .tanklevel5{
-	background-image: url(../images/elements/Water.png);
-	height: 10px;
+	background-size: 89px 10px;
 }
 .tanklevel6{
-	background-image: url(../images/elements/Water.png);
-	height: 0px;
-}
+	background-size: 89px 0px;
 }
 .pressurizertanklevel0{
-	background-image: url(../images/elements/Water.png);
-	height: 0px;
+	background-size: 82px 0px;
 }
 .pressurizertanklevel1{
-	background-image: url(../images/elements/Water.png);
-	height: 10px;
+	background-size: 82px 10px;
 }
 .pressurizertanklevel2{
-	background-image: url(../images/elements/Water.png);
-	height: 20px;
+	background-size: 82px 20px;
 }
 .pressurizertanklevel3{
-	background-image: url(../images/elements/Water.png);
-	height: 30px;
+	background-size: 82px 30px;
 }
 .pressurizertanklevel4{
-	background-image: url(../images/elements/Water.png);
-	height: 40px;
+	background-size: 82px 40px;
 }
 .pressurizertanklevel5{
-	background-image: url(../images/elements/Water.png);
-	height: 50px;
+	background-size: 82px 50px;
 }
 .pressurizertanklevel6{
-	background-image: url(../images/elements/Water.png);
-	height: 60px;
+	background-size: 82px 60px;
 }
 
 .pressurizertank{
 	position: relative;
 	left: 318px;
-	top: -575px;
+	top: -635px;
 	width: 82px;
+	height: 60px;
+	background-image: url(../images/elements/Water.png);
+	background-position: bottom;
+	background-repeat: no-repeat;
 }
 .hpitank{
 	position: relative;
 	left: 318px;
-	top: -365px;
+	top: -405px;
 	width: 89px;
+	height: 60px;
+	background-image: url(../images/elements/Water.png);
+	background-position: bottom;
+	background-repeat: no-repeat;
 }
 .auxtank{
 	position: relative;
 	left: 705px;
-	top: -425px;
+	top: -525px;
 	width: 89px;
+	height: 60px;
+	background-image: url(../images/elements/Water.png);
+	background-position: bottom;
+	background-repeat: no-repeat;
 }
 
 
